# rustbish

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  constants.rs  db.rs  main.rs  mainfile.rs  structs.rs  utils.rs  wal.rs
src/formatters/: mod.rs
